--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -27,6 +35,7 @@
     "from IPython.display import HTML\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import affine_transform\n",
+    "import SimpleITK as sitk\n",
     "\n",
     "\n",
     "PIPELINE_ROOT = Path('./').absolute().parents[1]\n",
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -48,10 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Version: 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -64,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -166,14 +183,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ec1aac4f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([[ 8.88575421e-01, -4.57335265e-01,  3.57515908e-02,\n",
+      "        -2.35788051e+02],\n",
+      "       [ 4.58688870e-01,  8.86842829e-01, -5.58060647e-02,\n",
+      "        -1.69603207e+02],\n",
+      "       [-6.18396059e-03,  6.59867543e-02,  9.97801336e-01,\n",
+      "         3.68774080e+01],\n",
+      "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+      "         1.00000000e+00]])\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
     "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
-    "transformation_matrix = euler_to_rigid_transform(euler, rotation_order='xyz', degrees=False)\n",
+    "transformation_matrix = euler_to_rigid_transform(reuler, degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
     "A = transformation_matrix[:3, :3]\n",
@@ -182,33 +217,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "0844f190",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SimpleITK.SimpleITK.TransformixImageFilter; proxy of <Swig Object of type 'itk::simple::TransformixImageFilter::Self *' at 0x711b10acdbc0> >"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_parameter0_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK78/DK78_MD589_10um_sagittal/reverse_elastix_output/TransformParameters.0.txt'\n",
+    "transformix_filter = sitk.TransformixImageFilter()\n",
+    "parameterMap0 = sitk.ReadParameterFile(transform_parameter0_path)\n",
+    "transformixImageFilter.SetTransformParameterMap(parameterMap0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "71722f78",
+   "id": "fc452abb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply affine transformation\n",
-    "# Apply affine transformation\n",
-    "origin = np.array([179.000000, 881.000000, 171.000000])\n",
-    "print('pixel', origin)\n",
-    "scale_um = np.array([0.325, 0.325, 20])\n",
-    "#scale_downsample = np.array([1/32, 1/32, 1])\n",
-    "origin_um = origin * scale_um\n",
-    "#origin_downsample = origin * scale_downsample\n",
-    "print('origin um', origin_um)\n",
-    "#print('origin downsample', origin_downsample)\n",
-    "origin_10um = origin_um / 10\n",
-    "origin_10um = np.array([535, 666, 515])\n",
-    "print('origin 10um', origin_10um)\n",
-    "#print(origin + translation/10)\n",
-    "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
-    "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
-    "print(np.round(trans_origin))\n",
-    "# 100,10\n",
-    "#[884 697 296]\n",
-    "#[718. 778. 224.]\n",
-    "# 25um calc [920. 415. 459.]\n",
-    "# inv or reuler = [1065.  420.  458.]"
+    "# 1. Perform Rigid Registration (using SimpleElastix)\n",
+    "# ... (Code to read images, set parameters, and run SimpleElastix)\n",
+    "# ... (Example:  elastixImageFilter = sitk.ElastixImageFilter())\n",
+    "# ... (Example: elastixImageFilter.SetFixedImage(fixed_image))\n",
+    "# ... (Example: elastixImageFilter.SetMovingImage(moving_image))\n",
+    "# ... (Example: elastixImageFilter.SetParameterMap(parameter_map))\n",
+    "# ... (Example: result_image = elastixImageFilter.Execute())\n",
+    "# ... (Example:  transform_parameters = elastixImageFilter.GetTransformParameters())\n",
+    "\n",
+    "# 2. Transform Points (using SimpleTransformix)\n",
+    "# ... (Code to read your points)\n",
+    "# ... (Example:  points = [[x1, y1], [x2, y2], ...])\n",
+    "\n",
+    "# ... (Code to create a SimpleTransformix filter)\n",
+    "# ... (Example: transformix_filter = sitk.TransformixImageFilter())\n",
+    "# ... (Example: transformix_filter.SetFixedImage(fixed_image))\n",
+    "# ... (Example: transformix_filter.SetMovingImage(moving_image))\n",
+    "# ... (Example: transformix_filter.SetTransformParameters(transform_parameters))\n",
+    "# ... (Example: transformix_filter.SetTransform(sitk.Transform.New(fixed_image.GetDimension(), sitk.Transform.TransformType.Rigid)))\n",
+    "# ... (Example:  transformed_points = transformix_filter.Execute(points))\n",
+    "\n",
+    "# ... (Code to process the transformed_points)\n",
+    "# ... (Example: print(transformed_points))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4b3de05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SimpleITK.SimpleITK.ParameterMap; proxy of <Swig Object of type 'std::map< std::string,std::vector< std::string,std::allocator< std::string > >,std::less< std::string >,std::allocator< std::pair< std::string const,std::vector< std::string,std::allocator< std::string > > > > > *' at 0x711c2c1ce6d0> >"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameterMap1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "71722f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1253.  547.  105.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "InputPoint = np.array([631, 884, 170 ])\n",
+    "OutputIndexFixed = np.array([ 356, 461, 224 ])\n",
+    "inv = np.linalg.inv(transformation_matrix)\n",
+    "trans_origin = apply_affine_transform(InputPoint, inv)\n",
+    "print(np.round(trans_origin))"
    ]
   },
   {
