Added the elastix transform for DK78

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,23 @@
     "    transform[:3, 3] = translation\n",
     "\n",
     "    return transform\n",
-    "# Example usage:\n"
+    "# Example usage:\n",
+    "\n",
+    "def convert_euler(x, y, z):\n",
+    "    reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
+    "    theta_x = reuler[0]\n",
+    "    theta_y = reuler[1]\n",
+    "    theta_z = reuler[2]\n",
+    "    translation = np.array(reuler[3:6])\n",
+    "    rotation_center = np.array([1166.5000000000, 689.5000000000, 436.5000000000])\n",
+    "    rigid_euler = sitk.Euler3DTransform(rotation_center, theta_x, theta_y, theta_z, translation)\n",
+    "    A1 = np.asarray(rigid_euler.GetMatrix()).reshape(3,3)\n",
+    "    t1 = np.asarray(rigid_euler.GetTranslation())\n",
+    "\n",
+    "    p = np.array([x, y, z])\n",
+    "    truec = rotation_center\n",
+    "    x1, y1, z1 = np.dot(A1, p - truec) + t1 + truec\n",
+    "    return x1, y1, z1\n"
    ]
   },
   {
@@ -183,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "ec1aac4f",
    "metadata": {
     "scrolled": true
@@ -193,108 +209,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 8.88575421e-01, -4.57335265e-01,  3.57515908e-02,\n",
-      "        -2.35788051e+02],\n",
-      "       [ 4.58688870e-01,  8.86842829e-01, -5.58060647e-02,\n",
-      "        -1.69603207e+02],\n",
-      "       [-6.18396059e-03,  6.59867543e-02,  9.97801336e-01,\n",
-      "         3.68774080e+01],\n",
-      "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-      "         1.00000000e+00]])\n",
-      "(3, 3)\n"
+      "[356.4269732  461.39962158 223.60231414]\n",
+      "[-274.5730268  -422.60037842   53.60231414]\n"
      ]
     }
    ],
    "source": [
     "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
     "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
-    "transformation_matrix = euler_to_rigid_transform(reuler, degrees=False)\n",
-    "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
-    "print(repr(transformation_matrix))\n",
-    "A = transformation_matrix[:3, :3]\n",
-    "print(A.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0844f190",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SimpleITK.SimpleITK.TransformixImageFilter; proxy of <Swig Object of type 'itk::simple::TransformixImageFilter::Self *' at 0x711b10acdbc0> >"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transform_parameter0_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK78/DK78_MD589_10um_sagittal/reverse_elastix_output/TransformParameters.0.txt'\n",
-    "transformix_filter = sitk.TransformixImageFilter()\n",
-    "parameterMap0 = sitk.ReadParameterFile(transform_parameter0_path)\n",
-    "transformixImageFilter.SetTransformParameterMap(parameterMap0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc452abb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Perform Rigid Registration (using SimpleElastix)\n",
-    "# ... (Code to read images, set parameters, and run SimpleElastix)\n",
-    "# ... (Example:  elastixImageFilter = sitk.ElastixImageFilter())\n",
-    "# ... (Example: elastixImageFilter.SetFixedImage(fixed_image))\n",
-    "# ... (Example: elastixImageFilter.SetMovingImage(moving_image))\n",
-    "# ... (Example: elastixImageFilter.SetParameterMap(parameter_map))\n",
-    "# ... (Example: result_image = elastixImageFilter.Execute())\n",
-    "# ... (Example:  transform_parameters = elastixImageFilter.GetTransformParameters())\n",
+    "theta_x = reuler[0]\n",
+    "theta_y = reuler[1]\n",
+    "theta_z = reuler[2]\n",
+    "translation = np.array(reuler[3:6])\n",
+    "rotation_center = np.array([1166.5000000000, 689.5000000000, 436.5000000000])\n",
+    "rigid_euler = sitk.Euler3DTransform(rotation_center, theta_x, theta_y, theta_z, translation)\n",
+    "A = np.asarray(rigid_euler.GetMatrix()).reshape(3,3)\n",
+    "A1 = np.asarray(rigid_euler.GetMatrix()).reshape(3,3)\n",
+    "c1 = np.asarray(rigid_euler.GetCenter())\n",
+    "t1 = np.asarray(rigid_euler.GetTranslation())\n",
     "\n",
-    "# 2. Transform Points (using SimpleTransformix)\n",
-    "# ... (Code to read your points)\n",
-    "# ... (Example:  points = [[x1, y1], [x2, y2], ...])\n",
-    "\n",
-    "# ... (Code to create a SimpleTransformix filter)\n",
-    "# ... (Example: transformix_filter = sitk.TransformixImageFilter())\n",
-    "# ... (Example: transformix_filter.SetFixedImage(fixed_image))\n",
-    "# ... (Example: transformix_filter.SetMovingImage(moving_image))\n",
-    "# ... (Example: transformix_filter.SetTransformParameters(transform_parameters))\n",
-    "# ... (Example: transformix_filter.SetTransform(sitk.Transform.New(fixed_image.GetDimension(), sitk.Transform.TransformType.Rigid)))\n",
-    "# ... (Example:  transformed_points = transformix_filter.Execute(points))\n",
-    "\n",
-    "# ... (Code to process the transformed_points)\n",
-    "# ... (Example: print(transformed_points))"
+    "p = np.array([631, 884, 170])\n",
+    "truec = rotation_center\n",
+    "p_transform = np.dot(A1, p - truec) + t1 + truec\n",
+    "p_displacement = p_transform - p\n",
+    "print(p_transform)\n",
+    "print(p_displacement)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4b3de05c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SimpleITK.SimpleITK.ParameterMap; proxy of <Swig Object of type 'std::map< std::string,std::vector< std::string,std::allocator< std::string > >,std::less< std::string >,std::allocator< std::pair< std::string const,std::vector< std::string,std::allocator< std::string > > > > > *' at 0x711c2c1ce6d0> >"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parameterMap1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "71722f78",
    "metadata": {},
    "outputs": [
@@ -302,16 +246,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1253.  547.  105.]\n"
+      "output [356 461 224]\n",
+      "356.426973203781 461.3996215830322 223.60231414364677\n"
      ]
     }
    ],
    "source": [
     "InputPoint = np.array([631, 884, 170 ])\n",
     "OutputIndexFixed = np.array([ 356, 461, 224 ])\n",
-    "inv = np.linalg.inv(transformation_matrix)\n",
-    "trans_origin = apply_affine_transform(InputPoint, inv)\n",
-    "print(np.round(trans_origin))"
+    "#trans_origin = apply_affine_transform(InputPoint, transformation_matrix)\n",
+    "x,y,z = convert_euler(631, 884, 170)\n",
+    "print('output', OutputIndexFixed)\n",
+    "print(x,y,z)"
    ]
   },
   {
