Created documentation for creating an atlas

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -184,106 +184,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7131fb8",
+   "id": "ec2ae3d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'DK78'\n",
-    "arrpath = os.path.join(data_path, f'{animal}/structure')\n",
-    "files = sorted(os.listdir(arrpath))\n",
-    "print(files)"
+    "structure = 'SC'\n",
+    "structure_path = os.path.join(data_path, 'AtlasV8', 'structure', f'{structure}.npy')\n",
+    "arr = np.load(structure_path)\n",
+    "print(arr.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ff60665",
+   "id": "d408e266",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform_parameters = [0.838170, 0.513898, 0.133786, -0.456345, 0.844519, -0.030896, -0.030553, \n",
-    "                        0.049440, 1.046799, 127.768986, 40.655073, -14.118681]\n",
-    "rotation = transform_parameters[:9]\n",
-    "rotation = np.array(rotation).reshape(3,3)\n",
-    "translation = np.array(transform_parameters[-3:])\n",
-    "translation = translation[..., np.newaxis]\n",
-    "print(translation)\n",
-    "transformation_matrix = np.hstack( [rotation, translation ])\n",
-    "transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
-    "print(rotation)"
+    "z = arr.shape[2] // 2\n",
+    "plt.imshow(arr[:, :, z], cmap='gray')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fdbc10f",
+   "id": "d4da9f96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = files[0]\n",
-    "arrpath = os.path.join(data_path, f'{animal}/structure/{file}')\n",
-    "print(arrpath)\n",
-    "volume = np.load(arrpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b73f4133",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "v1 = volume.copy()\n",
-    "print(v1.shape)\n",
-    "z = v1.shape[2] // 2\n",
-    "print('z=',z)\n",
-    "plt.imshow(v1[:, :, z], cmap=\"gray\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9803fc8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rotation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22521baf",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "v2 = volume.copy()\n",
-    "print(v2.shape)\n",
-    "v2 = np.rot90(v2, axes=(0, 1), k=1)\n",
-    "v2 = np.flip(v2, 0)\n",
-    "#v2 = affine_transform(v2, rotation, offset=0, order=1)\n",
-    "v2 = np.rot90(v2, axes=(0, 1), k=3)\n",
-    "v2 = np.flip(v2, 1)\n",
-    "v2[v2 > 0] = 255\n",
-    "print(z)\n",
-    "plt.imshow(v2[:, :, z], cmap=\"gray\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb0c2260",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ids, counts = np.unique(v2, return_counts=True)\n",
-    "print(ids)\n",
-    "print(counts)\n",
-    "print(v2.shape, v2.dtype)"
+    "volume = arr.copy()\n",
+    "volume = adjust_volume(volume, 255)\n",
+    "plt.imshow(volume[:,:,z], cmap=\"gray\")"
    ]
   },
   {
