--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -46,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -57,18 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XGBoost Version: 2.1.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -81,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -153,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'DK78'\n",
-    "fixed_name = 'MD589'\n",
+    "moving_name = 'AtlasV8'\n",
+    "fixed_name = 'Allen'\n",
     "\n",
-    "moving_all = list_coms(moving_name, scaling_factor=10)\n",
+    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
     "\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
@@ -164,6 +148,17 @@
     "print(f'{fixed_name} len={len(fixed_all.keys())}')\n",
     "\n",
     "print(len(common_keys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68804c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
+    "                                                  scaling_factor=1)\n"
    ]
   },
   {
@@ -195,69 +190,6 @@
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "print(f'#good_keys={len(good_keys)}')\n",
     "print(good_keys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "ec1aac4f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[356.4269732  461.39962158 223.60231414]\n",
-      "[-274.5730268  -422.60037842   53.60231414]\n"
-     ]
-    }
-   ],
-   "source": [
-    "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
-    "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
-    "theta_x = reuler[0]\n",
-    "theta_y = reuler[1]\n",
-    "theta_z = reuler[2]\n",
-    "translation = np.array(reuler[3:6])\n",
-    "rotation_center = np.array([1166.5000000000, 689.5000000000, 436.5000000000])\n",
-    "rigid_euler = sitk.Euler3DTransform(rotation_center, theta_x, theta_y, theta_z, translation)\n",
-    "A = np.asarray(rigid_euler.GetMatrix()).reshape(3,3)\n",
-    "A1 = np.asarray(rigid_euler.GetMatrix()).reshape(3,3)\n",
-    "c1 = np.asarray(rigid_euler.GetCenter())\n",
-    "t1 = np.asarray(rigid_euler.GetTranslation())\n",
-    "\n",
-    "p = np.array([631, 884, 170])\n",
-    "truec = rotation_center\n",
-    "p_transform = np.dot(A1, p - truec) + t1 + truec\n",
-    "p_displacement = p_transform - p\n",
-    "print(p_transform)\n",
-    "print(p_displacement)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "71722f78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output [356 461 224]\n",
-      "356.426973203781 461.3996215830322 223.60231414364677\n"
-     ]
-    }
-   ],
-   "source": [
-    "InputPoint = np.array([631, 884, 170 ])\n",
-    "OutputIndexFixed = np.array([ 356, 461, 224 ])\n",
-    "#trans_origin = apply_affine_transform(InputPoint, transformation_matrix)\n",
-    "x,y,z = convert_euler(631, 884, 170)\n",
-    "print('output', OutputIndexFixed)\n",
-    "print(x,y,z)"
    ]
   },
   {
@@ -324,7 +256,7 @@
     "df.index.name = 'Index'\n",
     "df = df.round(4)\n",
     "df.sort_values(by=['sumsquares'], inplace=True)\n",
-    "HTML(df.to_html(index=False))"
+    "df.to_csv('/home/eddyod/programming/pipeline/docs/sphinx/source/_static/results.csv', index=False)"
    ]
   }
  ],
