Updated the atlas docs

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -191,7 +191,7 @@
     "structure = 'SC'\n",
     "structure_path = os.path.join(data_path, 'AtlasV8', 'structure', f'{structure}.npy')\n",
     "arr = np.load(structure_path)\n",
-    "print(arr.shape)"
+    "print(arr.shape, arr.dtype)"
    ]
   },
   {
@@ -203,6 +203,52 @@
    "source": [
     "z = arr.shape[2] // 2\n",
     "plt.imshow(arr[:, :, z], cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "598efcf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "hist_dict = Counter({})\n",
+    "structure_path = os.path.join(data_path, 'AtlasV8', 'structure')\n",
+    "files = os.listdir(structure_path)\n",
+    "lfiles = 0\n",
+    "for file in files:\n",
+    "    file = os.path.basename(file)\n",
+    "    lfiles += 1\n",
+    "    input_path = os.path.join(structure_path, file)\n",
+    "    arr = np.load(input_path)\n",
+    "    flat = arr.flatten()\n",
+    "    img_counts, bins = np.histogram(flat)\n",
+    "    #img_counts = np.bincount(flat)\n",
+    "    img_dict = Counter(dict(zip(np.unique(flat), img_counts[img_counts.nonzero()])))\n",
+    "    hist_dict = hist_dict + img_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6799efda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_dict = dict(hist_dict)\n",
+    "hist_values = [i / lfiles for i in hist_dict.values()]\n",
+    "fig = plt.figure()\n",
+    "plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
+    "plt.bar(list(hist_dict.keys()), hist_values, color=\"r\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.grid(axis=\"y\", alpha=0.75)\n",
+    "plt.xlabel(\"Value\")\n",
+    "#plt.xlim(-40, 40)\n",
+    "#plt.ylim(0, 4000)\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(f\"with {lfiles} tif files\", fontsize=8)"
    ]
   },
   {
