Using affine transform for registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -49,10 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Version: 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -132,13 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DK78 len=0\n",
+      "MD589 len=57\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "moving_name = 'AtlasV8'\n",
-    "fixed_name = 'Allen'\n",
+    "moving_name = 'DK78'\n",
+    "fixed_name = 'MD589'\n",
     "\n",
     "moving_all = list_coms(moving_name, scaling_factor=1)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
