Removed origin transformation in create volumes

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
      "text": [
       "DK78 len=0\n",
       "MD589 len=57\n",
-      "0\n"
+      "57\n"
      ]
     }
    ],
@@ -170,6 +170,7 @@
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
     "\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
+    "common_keys = list(fixed_all.keys())\n",
     "print(f'{moving_name} len={len(moving_all.keys())}')\n",
     "print(f'{fixed_name} len={len(fixed_all.keys())}')\n",
     "\n",
@@ -250,22 +251,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4e7b269b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.80814, -0.439742, -0.06412, 0.393423, 0.666833, -0.104813, 0.011812, 0.0464, 0.993291]\n",
+      "[-240.865225 -173.912066   34.285577]\n"
+     ]
+    }
+   ],
    "source": [
+    "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
+    "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
+    "#print(transformation_matrix)\n",
     "structure = 'SC'\n",
-    "try:\n",
-    "    com = moving_all[structure]\n",
-    "except KeyError:\n",
-    "    structure = common_keys[0]\n",
-    "    com = moving_all[structure]\n",
-    "transformed_structure = apply_affine_transform(com, transformation_matrix)\n",
-    "print(f'{moving_name} {structure} {np.round(np.array(com))}')\n",
-    "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
-    "print(f'{moving_name} transformed {structure} {np.round(np.array(transformed_dict[structure]))}')\n",
+    "#try:\n",
+    "#    com = moving_all[structure]\n",
+    "#except KeyError:\n",
+    "#    structure = common_keys[0]\n",
+    "#    com = moving_all[structure]\n",
+    "#transformed_structure = apply_affine_transform(com, transformation_matrix)\n",
+    "#print(f'{moving_name} {structure} {np.round(np.array(com))}')\n",
+    "#print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
+    "#print(f'{moving_name} transformed {structure} {np.round(np.array(transformed_dict[structure]))}')\n",
     "#print(f'neuro res {moving_name} {structure} {np.round(com)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9f480a39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5bb0f135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "424.43396600000005 462.54160049999996 208.77299949999997\n",
+      "424 462 208\n",
+      "424 463 209\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = [0.808140, -0.439742, -0.064120, 0.393423, 0.666833, -0.104813, 0.011812, \n",
+    "                         0.046400, 0.993291, -240.865225, -173.912066, 34.285577]\n",
+    "t = np.array(params[9:])\n",
+    "R = np.array(params[:9]).reshape(3,3)\n",
+    "\n",
+    "center = np.array([1166.5, 689.5, 436.5])\n",
+    "InputPoint = [ 631.000000, 884.000000, 170.000000 ]\n",
+    "OutputIndexFixed = [ 424, 463, 209 ]\n",
+    "p = np.array(InputPoint)\n",
+    "x1,y1,z1 = np.dot(R, p - center) + t + center\n",
+    "print(x1, y1, z1)\n",
+    "print(int(x1), int(y1), int(z1))\n",
+    "print(int(round(x1)), int(round(y1)), int(round(z1)))\n"
    ]
   },
   {
