Adjusting COMs and origins and volume size in create atlas/registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
    "outputs": [
@@ -46,19 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "45da981f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -66,10 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Version: 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -107,41 +106,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MD585 len=51\n",
-      "MD589 len=51\n",
-      "51\n"
+      "37\n"
      ]
     }
    ],
    "source": [
-    "moving_name = 'MD585'\n",
-    "fixed_name = 'MD589'\n",
-    "\n",
+    "moving_name = 'AtlasV8'\n",
+    "fixed_name = 'Allen'\n",
     "moving_all = list_coms(moving_name, scaling_factor=1)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
-    "\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
-    "common_keys = list(fixed_all.keys())\n",
-    "print(f'{moving_name} len={len(moving_all.keys())}')\n",
-    "print(f'{fixed_name} len={len(fixed_all.keys())}')\n",
-    "\n",
+    "moving_src = np.array([moving_all[s] for s in common_keys])\n",
+    "fixed_src = np.array([fixed_all[s] for s in common_keys])\n",
     "print(len(common_keys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "68804c17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9.72566574e-01 -4.58940547e-02  1.49427273e-02  1.02659043e+03]\n",
+      " [ 1.21447170e-01  1.24356450e+00  6.82573214e-02 -3.12664675e+03]\n",
+      " [ 5.75878521e-03 -1.39164012e-02  1.15117466e+00 -1.30577953e+03]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
-    "transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
-    "                                                  scaling_factor=1)\n"
+    "#transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
+    "#                                                  scaling_factor=1)\n",
+    "transformation_matrix = compute_affine_transformation(moving_src, fixed_src)\n",
+    "print(transformation_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "88ba5a47",
    "metadata": {},
    "outputs": [
@@ -149,8 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#good_keys=49\n",
-      "{'DC_R', 'SNC_R', '10N_L', 'VCP_L', '4N_R', 'SC', 'DC_L', '7n_L', 'Sp5O_R', '6N_L', 'PBG_R', 'Amb_L', '7N_R', 'Sp5I_L', 'Pn_R', 'LC_L', '7n_R', 'Sp5C_L', 'VCA_R', 'Pn_L', '7N_L', 'VCA_L', '4N_L', '12N', 'RMC_L', 'Sp5I_R', 'LRt_L', 'LRt_R', '5N_R', 'Sp5C_R', '3N_R', 'Tz_L', 'SNR_R', 'Sp5O_L', '5N_L', 'VCP_R', 'LC_R', 'VLL_R', 'PBG_L', 'Amb_R', 'IC', 'SNC_L', 'Tz_R', 'RMC_R', '6N_R', 'SNR_L', 'VLL_L', '10N_R', '3N_L'}\n"
+      "#good_keys=35\n"
      ]
     }
    ],
@@ -174,13 +179,12 @@
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
-    "print(f'#good_keys={len(good_keys)}')\n",
-    "print(good_keys)"
+    "print(f'#good_keys={len(good_keys)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -188,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS 182.569581211849\n"
+      "RMS 244.71756294664905\n"
      ]
     }
    ],
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -226,9 +230,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MD585 SC [10317.  3197.  4544.]\n",
-      "MD589 SC [11339.  4729.  4288.]\n",
-      "MD585 transformed SC [11268.  4742.  4387.]\n"
+      "AtlasV8 SC [8397. 3141. 6131.]\n",
+      "Allen SC [9140. 2388. 5692.]\n",
+      "AtlasV8 transformed SC [9141. 2217. 5757.]\n"
      ]
     }
    ],
@@ -251,41 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9f480a39",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 3)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "5bb0f135",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "424.43396600000005 462.54160049999996 208.77299949999997\n",
-      "424 462 208\n",
-      "424 463 209\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "params = [0.808140, -0.439742, -0.064120, 0.393423, 0.666833, -0.104813, 0.011812, \n",
     "                         0.046400, 0.993291, -240.865225, -173.912066, 34.285577]\n",
@@ -317,6 +300,36 @@
     "df = df.round(4)\n",
     "df.sort_values(by=['sumsquares'], inplace=True)\n",
     "df.to_csv('/home/eddyod/programming/pipeline/docs/sphinx/source/_static/results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b26337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "com_um = np.array([11339,  4729,  4288.])\n",
+    "origin_allen = np.array([1013, 406, 254])\n",
+    "test_com = np.array([121,  67, 175])\n",
+    "scale = np.array([0.452, 0.452, 20])\n",
+    "origin_neuro = origin_um / scale\n",
+    "volume_shape = np.array([158, 102, 182])\n",
+    "xy_resolution = 0.452\n",
+    "SCALING_FACTOR = 32\n",
+    "scale0 = np.array([xy_resolution*SCALING_FACTOR, xy_resolution*SCALING_FACTOR, 20])\n",
+    "allen_um = np.array([10,10,10])\n",
+    "scale_allen = scale0 / allen_um"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cc171a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_allen + test_com"
    ]
   }
  ],
