Working with different alignments for atlas

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -113,8 +113,8 @@
    "source": [
     "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
+    "moving_all = fetch_coms(moving_name, scaling_factor=10)\n",
+    "fixed_all = list_coms(fixed_name, scaling_factor=10)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "moving_src = np.array([moving_all[s] for s in common_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in common_keys])\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "68804c17",
    "metadata": {},
    "outputs": [
@@ -131,9 +131,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 9.72566574e-01 -4.58940547e-02  1.49427273e-02  1.02659043e+03]\n",
-      " [ 1.21447170e-01  1.24356450e+00  6.82573214e-02 -3.12664675e+03]\n",
-      " [ 5.75878521e-03 -1.39164012e-02  1.15117466e+00 -1.30577953e+03]\n",
+      "[[ 9.77294500e-01 -4.23063531e-02  1.32610539e-02 -1.38221063e+02]\n",
+      " [ 1.31771269e-01  1.21350489e+00  7.29518726e-02 -4.27645429e+02]\n",
+      " [ 4.98328669e-03 -1.48360506e-02  1.14938824e+00  6.24880238e+01]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "88ba5a47",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS 244.71756294664905\n"
+      "RMS 23.858316066457654\n"
      ]
     }
    ],
@@ -304,10 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1b26337",
+   "execution_count": 18,
+   "id": "48322d35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'origin_um' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m test_com \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m121\u001b[39m,  \u001b[38;5;241m67\u001b[39m, \u001b[38;5;241m175\u001b[39m])\n\u001b[1;32m      4\u001b[0m scale \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.452\u001b[39m, \u001b[38;5;241m0.452\u001b[39m, \u001b[38;5;241m20\u001b[39m])\n\u001b[0;32m----> 5\u001b[0m origin_neuro \u001b[38;5;241m=\u001b[39m \u001b[43morigin_um\u001b[49m \u001b[38;5;241m/\u001b[39m scale\n\u001b[1;32m      6\u001b[0m volume_shape \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m158\u001b[39m, \u001b[38;5;241m102\u001b[39m, \u001b[38;5;241m182\u001b[39m])\n\u001b[1;32m      7\u001b[0m xy_resolution \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.452\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'origin_um' is not defined"
+     ]
+    }
+   ],
    "source": [
     "com_um = np.array([11339,  4729,  4288.])\n",
     "origin_allen = np.array([1013, 406, 254])\n",
@@ -324,12 +336,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3cc171a5",
+   "execution_count": 22,
+   "id": "00e4da7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([114.2656,  73.7664, 182.    ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "origin_allen + test_com"
+    "volume_shape = np.array([158, 102, 182])\n",
+    "xy_resolution = 0.452\n",
+    "SCALING_FACTOR = 20\n",
+    "to_um = np.array([0.452*32, 0.452*32, 20])\n",
+    "(volume_shape * to_um) / SCALING_FACTOR"
    ]
   }
  ],
